--- a/css/site.css
+++ b/css/site.css
@@ -4,6 +4,10 @@ body {
 	font-weight: 100;
 	margin: 0;
 	background-image: url(../img/background.jpg);
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 #acmw-logo {
